# rs-xkcd-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-release.yml
config/: base.yml.sample  development.yml.sample  production.yml.sample  redis.conf
src/: commands.rs  configuration.rs  database.rs  errors.rs  lib.rs  main.rs  utils.rs
tests/: bot.rs  database.rs  functions.rs  main.rs  utils.rs
