[package]
name = "oxotly_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = "0.11.18"
serde = { version = "1.0.180", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
