[package]
name = "oxotly_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
config = "0.13.3"
dotenv = "0.15.0"
dptree = "0.3.0"
env_logger = "0.10.0"
html5ever = "0.26.0"
log = "0.4.19"
redis = { version = "0.23.1", features = ["tokio-comp"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
serde = { version = "1.0.180", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tendril = "0.4.3"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
